# mini-jvm

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/logging/: log.h
include/mini_jvm/class_loader/: OLD_class_format.h  class.h  class_flags.h  class_format.h  class_obj.h  class_reader.h
include/mini_jvm/constant_pool/: constant_pool.h  link_resolver.h
include/mini_jvm/error/: err_vm.h
include/mini_jvm/utils/: file_io.h  sreader.h  string_format.h
src/: log.c  main.c
src/class_loader/: OLD_class_format.c  class.c  class_flags.c  class_format.c  class_obj.c  class_reader.c
src/constant_pool/: constant_pool.c  link_resolver.c
src/kernel/: class_pool.c
src/lang/: class.h  class_member.c  class_member.h
src/lang/internal/: const_pool.h  flags.h
src/lang/tag/: const_pool.h
src/loader/: classloader.c  classloader.h
src/runtime/: frame.h
src/util/: bytestream.c  bytestream.h  debug.h
src/utils/: file_io.c  sreader.c  string_format.c
